--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,13 @@
             style="@style/firstButton"
             android:backgroundTint="@color/Secondary"
             android:drawableLeft="@drawable/teacher_button_wrapper"
-            android:text=" Učiteľ" />
+            android:text="@string/teacher" />
 
         <Button
             android:id="@+id/student_login_button"
             style="@style/firstButton"
             android:backgroundTint="@color/Primary"
             android:drawableLeft="@drawable/student_button_wrapper"
-            android:text="Žiak" />
+            android:text="@string/student" />
     </LinearLayout>
 </RelativeLayout>
