--- a/app/src/main/res/layout/grid_x_list_item.xml
+++ b/app/src/main/res/layout/grid_x_list_item.xml
@@ -27,7 +27,8 @@
                 android:id="@+id/delete"
                 style="@style/closeButton"
                 android:layout_marginTop="-5dp"
-                android:layout_marginEnd="-5dp"/>
+                android:layout_marginEnd="-5dp"
+                android:contentDescription="@string/deleteCodeDescription" />
         </RelativeLayout>
 
         <TextView
@@ -36,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Meno Priezvisko" />
+            android:text="@string/firstName" />
     </RelativeLayout>
 
 </LinearLayout>
