--- a/app/src/main/res/layout/activity_classroom_groups.xml
+++ b/app/src/main/res/layout/activity_classroom_groups.xml
@@ -15,12 +15,12 @@
         <ImageButton
             android:id="@+id/backButton"
             style="@style/backButton"
-            android:contentDescription="@string/back" />
+            android:contentDescription="@string/backCodeDescription" />
 
         <TextView
             android:id="@+id/classroomName"
             style="@style/headline"
-            android:text="Meno triedy" />
+            android:text="@string/classroomName" />
 
         <GridView
             android:id="@+id/groupsLayout"
@@ -31,26 +31,26 @@
         <ImageButton
             android:id="@+id/addButton"
             style="@style/addButton"
-            android:contentDescription="@string/add" />
+            android:contentDescription="@string/addCodeDescription" />
 
         <LinearLayout style="@style/bottomNavigationLayout">
 
             <ImageButton
                 android:id="@+id/tasksButton"
                 style="@style/navButton"
-                android:contentDescription="@string/tasks"
+                android:contentDescription="@string/tasksCodeDescription"
                 android:src="@mipmap/tasks" />
 
             <ImageButton
                 android:id="@+id/studentsButton"
                 style="@style/navButton"
-                android:contentDescription="@string/students"
+                android:contentDescription="@string/studentsCodeDescription"
                 android:src="@mipmap/students" />
 
             <ImageButton
                 android:id="@+id/groupsButton"
                 style="@style/navButton"
-                android:contentDescription="@string/groups"
+                android:contentDescription="@string/groupsCodeDescription"
                 android:src="@mipmap/groups_highlighted" />
         </LinearLayout>
     </RelativeLayout>
@@ -64,7 +64,8 @@
 
         <ImageButton
             android:id="@+id/closeGroupPanel"
-            style="@style/backButtonDark" />
+            style="@style/backButtonDark"
+            android:contentDescription="@string/closeCodeDescription" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -73,7 +74,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -88,6 +89,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
+                        android:contentDescription="@string/groupsCodeDescription"
                         android:src="@drawable/baseline_account_circle_dark_24" />
 
                     <ImageButton
@@ -97,6 +99,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/oval_50_primary"
+                        android:contentDescription="@string/editImageCodeDescription"
                         android:src="@drawable/baseline_edit_24" />
 
                 </RelativeLayout>
@@ -116,7 +119,7 @@
                 <TextView
                     android:id="@+id/textInGroup"
                     style="@style/chipTextView"
-                    android:text="V skupine" />
+                    android:text="@string/inGroup" />
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/chipGroupIn"
@@ -127,7 +130,7 @@
                 <TextView
                     android:id="@+id/textNotInGroup"
                     style="@style/chipTextView"
-                    android:text="Mimo skupiny" />
+                    android:text="@string/notInGroup" />
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/chipGroupNotIn"
@@ -163,7 +166,7 @@
                 <ImageButton
                     android:id="@+id/closeEditPanel"
                     style="@style/closeButton"
-                    android:contentDescription="@string/close" />
+                    android:contentDescription="@string/closeCodeDescription" />
             </RelativeLayout>
 
             <Button
@@ -229,7 +232,7 @@
         <ImageButton
             android:id="@+id/closeFragmentButton"
             style="@style/backButtonDark"
-            android:contentDescription="@string/back" />
+            android:contentDescription="@string/backCodeDescription" />
 
     </RelativeLayout>
 </RelativeLayout>
