--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <ImageButton
         android:id="@+id/backButton"
         style="@style/backButtonDark"
-        android:contentDescription="@string/back" />
+        android:contentDescription="@string/backCodeDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Nemáte ešte účet?"
+            android:text="@string/newHere"
             android:textAlignment="center" />
 
         <Button
@@ -93,7 +93,7 @@
                 <ImageButton
                     android:id="@+id/backToLoginButton"
                     style="@style/backButtonDark"
-                    android:contentDescription="@string/back" />
+                    android:contentDescription="@string/backCodeDescription" />
             </RelativeLayout>
 
             <com.google.android.material.textfield.TextInputLayout
