--- a/app/src/main/res/layout/activity_task_type1.xml
+++ b/app/src/main/res/layout/activity_task_type1.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,15 +25,17 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        style="@style/backButtonDark"/>
+        style="@style/backButtonDark"
+        android:contentDescription="@string/backCodeDescription" />
 
     <ImageButton
         android:id="@+id/prevBoard"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginVertical="50dp"
         android:layout_centerVertical="true"
+        android:layout_marginVertical="50dp"
         android:backgroundTint="@color/transparent"
+        android:contentDescription="@string/prevBoardCodeDescription"
         android:src="@drawable/baseline_arrow_left_dark_24"
         android:visibility="gone" />
 
@@ -42,10 +43,11 @@
         android:id="@+id/nextBoard"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginVertical="50dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginVertical="50dp"
         android:backgroundTint="@color/transparent"
+        android:contentDescription="@string/nextBoardCodeDescription"
         android:src="@drawable/baseline_arrow_right_dark_24"
         android:visibility="gone" />
 
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/transparent"
+            android:contentDescription="@string/resetCodeDescription"
             android:src="@drawable/baseline_replay_dark_24" />
 
         <ImageButton
@@ -68,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/transparent"
+            android:contentDescription="@string/saveCodeDescription"
             android:src="@drawable/baseline_save_dark_24" />
     </LinearLayout>
 
