--- a/app/src/main/res/layout/classroom_list_item.xml
+++ b/app/src/main/res/layout/classroom_list_item.xml
@@ -8,7 +8,8 @@
 
         <ImageView
             android:id="@+id/classroomImage"
-            style="@style/classroomImagePrefab" />
+            style="@style/classroomImagePrefab"
+            android:importantForAccessibility="no" />
 
         <TextView
             android:id="@+id/classroomName"
@@ -16,7 +17,8 @@
 
         <ImageButton
             android:id="@+id/editClassroomButton"
-            style="@style/editButton" />
+            style="@style/editButton"
+            android:contentDescription="@string/editCodeDescription" />
     </RelativeLayout>
 
 </LinearLayout>
