--- a/app/src/main/res/layout/grid_image_list_item.xml
+++ b/app/src/main/res/layout/grid_image_list_item.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:layout_centerInParent="true"/>
+                android:layout_marginVertical="10dp" />
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
