--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -21,12 +21,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp" />
+                android:layout_marginVertical="20dp"
+                android:importantForAccessibility="no" />
 
             <ImageButton
                 android:id="@+id/edit"
                 style="@style/editButton"
-                android:layout_marginTop="-3dp" />
+                android:layout_marginTop="-3dp"
+                android:contentDescription="@string/editCodeDescription" />
         </RelativeLayout>
 
         <TextView
@@ -35,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Meno Priezvisko"/>
+            android:text="@string/firstName" />
     </RelativeLayout>
 
 </LinearLayout>
