--- a/app/src/main/res/layout/grid_student_task_item.xml
+++ b/app/src/main/res/layout/grid_student_task_item.xml
@@ -21,7 +21,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp" />
+                android:layout_marginVertical="20dp"
+                android:importantForAccessibility="no" />
 
         </RelativeLayout>
 
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Meno úlohy" />
+            android:text="@string/taskName" />
     </RelativeLayout>
 
 </LinearLayout>
